<resources>
    <string name="app_name">BluetoothLE</string>
    <string name="tools_notification_text">Notification Text</string>
    <string name="DEVICE_NOT_SUPPORTED">This device is not supported, Bluetooth LE support is required!</string>
    <string name="SCANNING">Scanning…</string>
    <string name="BT_ACCESS_REQUIRED">Bluetooth access is required</string>
    <string name="tools_device_name">My BLE Device</string>
    <string name="tols_mac_address">AB:CD:EF:12:34:56</string>
    <string name="tools_device_type">DEVICE_TYPE_LE</string>
    <string name="ble_device_title_name">Name:</string>
    <string name="ble_device_title_mac_address">MAC addr:</string>
    <string name="ble_device_title_type">Type:</string>
    <string name="cd_ble_icon">Bluetooth Low Energy Icon</string>
    <string name="LOCATION_ACCESS_REQUIRED">Location access is Required for BLE scanning!</string>
    <string name="NYI">Not Yet Implemented</string>
    <string name="not_implemented_for_for_demo_string_app_name">Not Implemented for this demo app</string>
    <plurals name="numberOfDevices">
        <item quantity="one">Scan finished %d ble device found.</item>
        <item quantity="other">Scan finished %d ble devices found.</item>
    </plurals>
    <plurals name="scanning_timer">
        <item quantity="one">Scanning … %d second</item>
        <item quantity="other">Scanning … %d seconds</item>
    </plurals>

    <string name="ble_device_title_class">BT Class:</string>
    <string name="tools_device_class_name">Device Class Name</string>

    <string name="bt_class_unknown_class">Unknown Class(%1$d)</string>
    <string name="bt_class_major_audio_video">Audio Video</string>
    <string name="bt_class_major_computer">Computer</string>
    <string name="bt_class_major_health">Health</string>
    <string name="bt_class_major_wearable">Wearable</string>
    <string name="bt_class_major_uncategorized">Uncategorised</string>
    <string name="bt_class_major_toy">Toy</string>
    <string name="bt_class_major_phone">Phone</string>
    <string name="bt_class_major_peripheral">Peripheral</string>
    <string name="bt_class_major_networking">Networking</string>
    <string name="bt_class_major_misc">Miscellaneous</string>
    <string name="bt_class_major_imaging">Imaging</string>
    <string name="bt_class_av_camcorder">A/V Camcorder</string>
    <string name="bt_class_av_car_audio">A/V Car Audio</string>
    <string name="bt_class_av_handsfree">A/V Hands-free</string>
    <string name="bt_class_av_headphones">A/V Headphones</string>
    <string name="bt_class_av_hifi_audio">A/V HiFi Audio</string>
    <string name="bt_class_av_loudspeaker">A/V Loudspeaker</string>
    <string name="bt_class_av_microphone">A/V Microphone</string>
    <string name="bt_class_av_portable_audio">A/V Portable Audio</string>
    <string name="bt_class_av_set_top_box">A/V Set Top Box</string>
    <string name="bt_class_av_uncategorised">A/V Uncategorized</string>
    <string name="bt_class_av_vcr">A/V VCR</string>
    <string name="bt_class_av_video_camera">A/V Video Camera</string>
    <string name="bt_class_av_video_conferencing">A/V Video Conferencing</string>
    <string name="bt_class_av_video_display_and_loudspeaker">A/V Video Display and Loudspeaker</string>
    <string name="bt_class_av_video_gaming_toy">A/V Video Gaming Toy</string>
    <string name="bt_class_av_video_monitor">A/V Video Monitor</string>
    <string name="bt_class_av_video_wearable_headset">A/V Video Wearable Headset</string>
    <string name="bt_class_computer_handeld_pc_pda">Computer Handheld PC/PDA</string>
    <string name="bt_class_computer_laptop">Computer Laptop</string>
    <string name="bt_class_computer_plam_size_pc_pda">Computer Palm Size PC/PDA</string>
    <string name="bt_class_computer_server">Computer Server</string>
    <string name="bt_class_computer_wearable">Computer Wearable</string>
    <string name="bt_class_computer_uncategorised">Computer Uncategorised</string>
    <string name="bt_class_health_blood_pressure">Health Blood Pressure</string>
    <string name="bt_class_health_data_display">Health Data Display</string>
    <string name="bt_class_health_glucose">Health Glucose</string>
    <string name="bt_class_health_pulse_oximeter">Health Pulse Oximeter</string>
    <string name="bt_class_health_pulse_rate">Health Pulse Rate</string>
    <string name="bt_class_health_thermometer">Health Thermometer</string>
    <string name="bt_class_health_uncategorised">Health Uncategorised</string>
    <string name="bt_class_phone_cellular">Phone Cellular</string>
    <string name="bt_class_phone_cordless">Phone Cordless</string>
    <string name="bt_class_phone_isdn">Phone ISDN</string>
    <string name="bt_class_phone__modem_or_gateway">Phone Modem Or Gateway</string>
    <string name="bt_class_phone_smart">Phone Smart</string>
    <string name="bt_class_phone_uncategorised">Phone Uncategorised</string>
    <string name="bt_class_toy_controller">Toy Controller</string>
    <string name="bt_class_toy_doll_action_figure">Toy Doll Action Figure</string>
    <string name="bt_class_toy_game">Toy Game</string>
    <string name="bt_class_toy_robot">Toy Robot</string>
    <string name="bt_class_toy_uncategorised">Toy Uncategorised</string>
    <string name="bt_class_toy_vehicle">Toy Vehicle</string>
    <string name="bt_class_wearable_glasses">Wearable Glasses</string>
    <string name="bt_class_wearable_helmet">Wearable Helmet</string>
    <string name="bt_class_wearable_jacket">Wearable Jacket</string>
    <string name="bt_class_wearable_pager">Wearable Pager</string>
    <string name="bt_class_wearable_uncategorised">Wearable Uncategorised</string>
    <string name="bt_class_wearable_wrist_watch">Wearable Wrist Watch</string>
    <string name="bt_class_peripheral_nknp">Peripheral Non Keyboard Non Pointing</string>
    <string name="bt_class_peripheral_keyboard">Peripheral Keyboard</string>
    <string name="bt_class_peripheral_p">Peripheral Pointing</string>
    <string name="bt_class_peripheral_kp">Peripheral Keyboard Pointing</string>
    <string name="bt_class_computer_desktop">Computer Desktop</string>
    <string name="bt_class_not_set">Uncategorised, code for device not assigned</string>
    <string name="label_device_detail_activity">Device Detail</string>
    <string name="play_pause_button">Play Pause button</string>
    <string name="stop_button">Stop Button</string>
    <string name="detail_title">Detail: %s</string>
</resources>
